<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Weighted Average</string>
    <string name="StringaTitolo">Compute your Weighted Average Grade</string>
    <string name="StringaTitoloModificaStudente">Modify the Student\'s Data</string>
    <string name="StringaTitoloModificaEsame">Modify the Exam\'s Data</string>
    <string name="StringaFile">File</string>
    <string name="StringaMenuModifica">Edit</string>
    <string name="StringaErrore">Error</string>
    <string name="StringaMessaggioInformazioni">A Teaching Example\n\nBachelor Degre in Computer Science\nUniversity of Basilicata\ndonatello.santoro@unibas.it\ngiansalvatore.mecca@unibas.it</string>
    <string name="StringaCognome">Surname</string>
    <string name="StringaNome">Name</string>
    <string name="StringaMatricola">Student Id</string>
    <string name="StringaInsegnamento">Course</string>
    <string name="StringaCrediti">Credits</string>
    <string name="StringaVoto">Grade</string>
    <string name="StringaLode">Laude</string>
    <string name="StringaData">Date</string>
    <string name="StringaGiorno">Day</string>
    <string name="StringaMese">Month</string>
    <string name="StringaAnno">Year</string>
    <string name="StringaInserisci">Add</string>
    <string name="StringaModifica">Change</string>
    <string name="StringaAnnulla">Back</string>
    <string name="StringaModificaStudente">Update Student</string>
    <string name="StringaInserisciEsame">Add a New Exam</string>
    <string name="StringaModificaEsame">Update Exam</string>
    <string name="StringaEliminaEsame">Delete Exam</string>
    <string name="StringaDatiStudente">Student\'s Data</string>
    <string name="StringaInserisciDatiStudente">Insert this student\'s data</string>
    <string name="StringaElencoEsami">List of Exams</string>
    <string name="StringaMediaPesata">Weighted Average</string>
    <string name="StringaCreditiTotali">Total Credits:</string>
    <string name="StringaMedia30mi">Weighted Average (30):</string>
    <string name="StringaMedia110mi">Weighted Average (110):</string>
    <string name="StringaNuovoStudente">New Student</string>
    <string name="StringaImporta">Import</string>
    <string name="StringaEsporta">Export</string>
    <string name="StringaImportaExternalStorage">Import from External Storage</string>
    <string name="StringaEsportaExternalStorage">Expor from External Storaget</string>
    <string name="StringaEsci">Exit</string>
    <string name="StringaInformazioni">About this Application</string>
    <string name="StringaTabellaEsami">Table of Exams</string>
    <string name="StringaListaEsami">List of Exams</string>
    <string name="StringaDescrizioneModificaStudente">Update this student\'s data</string>
    <string name="StringaDescrizioneAnnullaModificaStudente">Cancel update</string>
    <string name="StringaDescrizioneModificaEsame">Update this exam\'s data</string>
    <string name="StringaDescrizioneAnnullaModificaEsame">Cancel update</string>
    <string name="StringaDescrizioneNuovoStudente">Create a New Student</string>
    <string name="StringaDescrizioneApri">Load a student\'s data from file </string>
    <string name="StringaDescrizioneSalva">Save the student\'s data into a file </string>
    <string name="StringaDescrizioneInformazioni">About this Application</string>
    <string name="StringaDescrizioneEsci">Exit this Application </string>
    <string name="StringaDescrizioneInserisciEsame">Insert a New Exam</string>
    <string name="StringaDescrizioneEliminaEsame">Delete the Selected Exam</string>
    <string name="StringaImpossibileCaricare">It was not possible to load the data</string>
    <string name="StringaComandoAnnullato">Operation aborted </string>
    <string name="StringaImpossibileSalvare">It was not possible to save the data</string>
    <string name="StringaStudenteNullo">You need to create a student first</string>
    <string name="StringaNecessarioSelezionareEsame">You need to select an exam first</string>
    <string name="StringaInsegnamentoVuoto">The course name cannot be empty    </string>
    <string name="StringaErroreCrediti">Invalid value for credits </string>
    <string name="StringaCreditiNumero">Credits must be a numerical value </string>
    <string name="StringaErroreVoto">The grade must be a number between 18 and 30 </string>
    <string name="StringaErroreGiorno">The day is not correct</string>
    <string name="StringaVotoNumero">The grade must be a number between 18 and 30  </string>
    <string name="StringaErroreLode">Laude is only allowed if grade is 30 </string>
    <string name="StringaNomeVuoto">The name cannot be empty </string>
    <string name="StringaCognomeVuoto">The surname cannot be empty </string>
    <string name="StringaErroreMatricola">The Student id must be a positive number </string>
    <string name="StringaMatricolaNumero">The Student id must be a positive number</string>
    <string name="StringaFileNonTrovato">File not found</string>
    <string name="StringaStudenteModificato">The student\'s data have been modified</string>
    <string name="StringaEsameInserito">The new exam has been added to the list</string>
    <string name="StringaEsameModificato">The exam\'s data have been modified</string>
    <string name="StringaEsameEliminato">Exam deleted</string>
    <string name="StringaFileCaricato">Data have been loaded</string>
    <string name="StringaFileSalvato">Data have been saved</string>
    <string name="StringaOk">OK</string>
    <string name="StringaCondividi">Share</string>
    <string name="StringaEliminazioneEsame">Delete exam</string>
    <string name="StringaVuoiEliminareEsame">Do you really want to delete this exam?</string>
    <string name="StringaSelezionaFile">File name</string>
    <string name="StringaInstallareFileManager">Please install a File Manager.</string>
    <string name="StringaImportSuccesso">Import Successfully</string>
    <string name="StringaExportSuccesso">Export Successfully</string>
    <string name="StringaPermessoNegato">Check your permission</string>
</resources>
