<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/StringaDatiStudente"
        android:id="@+id/testoListaEsami"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:textStyle="bold"
        android:textColor="@color/accent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringaCognome"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/testoCognome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:singleLine="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="7dp"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringaNome"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/testoNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:singleLine="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="7dp"
        android:inputType="textPersonName"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringaMatricola"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="7dp"/>

    <TextView
        android:id="@+id/testoMatricola"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:singleLine="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="7dp"
        android:inputType="number"/>

</LinearLayout>
