<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:materialdesign="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/StringaListaEsami"
            android:id="@+id/testoListaEsami"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:textColor="@color/accent"/>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:id="@+id/listaEsami"
            android:choiceMode="singleChoice"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/StringaCreditiTotali"
                android:id="@+id/testoCreditiTotali"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/StringaMedia30mi"
                android:id="@+id/testoMediaVoto30mi"
                android:layout_marginLeft="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/StringaMedia110mi"
                android:id="@+id/testaMediaVoto110mi"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>
    </LinearLayout>

    <com.gc.materialdesign.views.ButtonFloat
        android:id="@+id/bottoneAggiungiEsame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@color/bottone_selezionato"
        android:layout_gravity="bottom|right"
        materialdesign:iconDrawable="@drawable/ic_add_white_24dp"/>


</RelativeLayout>
